--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -21,5 +21,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: ./ # buildalon/setup-plastic-scm@v1
+        with:
+          unity-username: ${{ secrets.UNITY_USERNAME }}
+          unity-password: ${{ secrets.UNITY_PASSWORD }}
       - run: |
           cm version
