--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -23,6 +23,9 @@ jobs:
       - uses: ./ # buildalon/setup-plastic-scm@v1
         with:
           unity-username: ${{ secrets.UNITY_USERNAME }}
-          unity-password: ${{ secrets.UNITY_PASSWORD }}
+          uvcs-organization: ${{ secrets.UVCS_ORGANIZATION }}
+          unity-cloud-project-id: ${{ secrets.UNITY_CLOUD_PROJECT_ID }}
+          unity-service-account-credentials: ${{ secrets.UNITY_SERVICE_ACCOUNT_CREDENTIALS }}
       - run: |
           cm version
+          cm repository list
