--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "@actions/core": "^1.10.1",
     "@actions/exec": "^1.1.1",
     "@actions/glob": "^0.5.0",
-    "@actions/tool-cache": "^2.0.1",
-    "cheerio": "^1.0.0"
+    "@actions/tool-cache": "^2.0.1"
   },
   "devDependencies": {
     "@types/node": "^22.2.0",
